@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.7 2005-03-14 17:05:14 achu Exp $
+## $Id: Makefile.am,v 1.8 2005-03-14 22:05:55 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -35,9 +35,8 @@ endif
 
 pkglib_LTLIBRARIES = \
 	$(GENDERSLLNL_CLUSTERLIST_MODULE) \
-	$(GENDERS_CLUSTERLIST_MODULE)
-
-#	cerebrod_clusterlist_hostsfile.la
+	$(GENDERS_CLUSTERLIST_MODULE) \
+	cerebrod_clusterlist_hostsfile.la
 
 MODULE_FLAGS = -module -avoid-version
 
@@ -51,10 +50,10 @@ cerebrod_clusterlist_genders_la_LDFLAGS = $(MODULE_FLAGS) $(GENDERS_LIBS)
 cerebrod_clusterlist_genders_la_CFLAGS = -I$(srcdir)/../libcommon
 cerebrod_clusterlist_genders_la_LIBADD = ../libcommon/libcommon.la
 
-#cerebrod_clusterlist_hostsfile_la_SOURCES = cerebrod_clusterlist_hostsfile.c
-#cerebrod_clusterlist_hostsfile_la_LDFLAGS = $(MODULE_FLAGS) $(HOSTSFILE_LIBS)
-#cerebrod_clusterlist_hostsfile_la_CFLAGS = -I$(srcdir)/../libcommon
-#cerebrod_clusterlist_hostsfile_la_LIBADD = ../libcommon/libcommon.la
+cerebrod_clusterlist_hostsfile_la_SOURCES = cerebrod_clusterlist_hostsfile.c
+cerebrod_clusterlist_hostsfile_la_LDFLAGS = $(MODULE_FLAGS)
+cerebrod_clusterlist_hostsfile_la_CFLAGS = -I$(srcdir)/../libcommon
+cerebrod_clusterlist_hostsfile_la_LIBADD = ../libcommon/libcommon.la
 
 ../libcommon/libcommon.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
