@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod.h,v 1.2 2005-02-01 22:37:28 achu Exp $
+ *  $Id: cerebrod.h,v 1.3 2005-03-14 22:05:55 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_H
@@ -11,6 +11,7 @@
 #define MAXHOSTNAMELEN 64
 #endif
 
+#define CEREBROD_PARSE_BUFLEN   4096
 #define CEREBROD_PACKET_BUFLEN  1024
 #define CEREBROD_STRING_BUFLEN  1024
 
